# YACT

./: .gitignore  Agents.md  BUGS.md  Makefile  README.md  knip.json  package-lock.json  package.json  pnpm-lock.yaml
.docs/: ARCHITECTURE.md  DECISIONS.md  PHILOSOPHY.md  UI_STYLE.md
.docs/bugs/: BUGS.md
.docs/features/archive/: README.md
.docs/features/open/: ROADMAP.md
apps/analytics/: pyproject.toml
apps/analytics/app/: main.py  models.py
apps/analytics/tests/: test_health.py
apps/web/: package.json  svelte.config.js  tsconfig.json  vitest.config.ts
apps/web/src/: app.css  app.d.ts  hooks.client.ts
apps/web/src/lib/components/: CoinTerminalChart.svelte  M3Button.svelte  M3Surface.svelte  RouteProgress.svelte  ViewSettingsMenu.svelte
apps/web/src/lib/composables/: useMarketsDataRecovery.svelte.ts  useProgressiveDataLoad.svelte.ts  useViewSettings.svelte.ts
apps/web/src/lib/effects/: usePriceJitter.svelte.ts
apps/web/src/lib/layouts/: AppShellLayout.svelte
apps/web/src/lib/server/: autoRefreshService.ts  client-log-buffer.ts  coingecko.ts  dataPaths.ts  headlines.ts  persistentCoinSnapshot.ts  persistentHeadlinesSnapshot.ts  persistentMarketSnapshot.ts
apps/web/src/lib/types/: market.ts
apps/web/src/lib/utils/: formatters.ts
apps/web/src/routes/: +layout.svelte  +page.svelte  +page.ts  README.md
apps/web/src/routes/watchlist/: +page.svelte  +page.ts
apps/web/src/styles/: application-shell.css
docs/features/open/: ROADMAP.md
scripts/: capture-web-incident.sh  check.sh  dev-analytics.sh  dev-web.sh
(+26 files in other folders)
